# railson-dev-blog

./: LICENSE  README.md
modules/api/: Cargo.toml
modules/api/src/: dynamo_db.rs  graphql_schema.rs  main.rs
modules/posts-collector/: Cargo.toml  README.md
modules/posts-collector/src/: dynamo_db.rs  main.rs  post_identification.rs
modules/web/: .env.example  package.json
modules/web/src/app/: layout.tsx  page.tsx
modules/web/src/app/[post-slug]/[post-uid]/: page.tsx
modules/web/src/app/[post-slug]/[post-uid]/[post-timestamp]/: page.tsx  seo.tsx
posts/: headless-scalable-blog-engine.md
posts/.obsidian/: appearance.json  types.json  workspace.json
